@@ -2,5 +2,15 @@ javadns
 =======
 
 Developing from the DummyDNS Program
-
 http://seit.unsw.adfa.edu.au/staff/sites/lpb/src/DummyDNS/README.html
+
+GreenUML - http://www.cse.buffalo.edu/faculty/alphonce/green
+
+eclipse.ini
+-vmargs
+-Xms90m
+-Xmx456m
+-XX:PermSize=128m
+
+eclipse external tools configuration backup
+eclipse-workspace]\.metadata\.plugins\org.eclipse.debug.core\.launches
